# open-modbusgateway

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
.github/workflows/: teltonika.yaml  teltonika_rut9_r.yaml  teltonika_rut9m_r.yaml  teltonika_trb1_r.yaml
openwrt/: Makefile  modbusgateway.conf  modbusgateway.init  omg.init  openmmg.config  openmmg.init
openwrt/CONTROL/: conffiles  control  prerm
src/: Makefile  Makefile.am  Makefile.in  config_parser.c  config_parser.h  filters.c  filters.h  iprange.c  iprange.h  log.c  log.h  main.c  mqtt_client.c  mqtt_client.h  omg.conf.example  openmmg.conf.example  request.c  request.h
test/: Makefile  mqtt_test_helpers.c  mqtt_test_helpers.h  rtu_slave_sim.c  run_serial_gateway_integration.sh  test  test.c  test.h  test_config.c  test_filters.c  test_ip_in_range.c  test_mqtt_client.c
